# gin_scoring

./: .dockerignore  .env  .env.development  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  alembic.ini  db_schema.sql  dev-start.zsh  docker-compose.yml  fly.toml  go.mod  go.sum  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  sqlboiler.toml  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
alembic/: env.py
cmd/http_server/: main.go
cmd/quicktests/: get_hall_of_fame_global.go  get_hall_of_fame_monthly.go  get_last_games.go  save_game_result.go
gin_scoring/apps/scoreboard/: assets_generation.py  dev_helpers.py  forms.py  models.py  urls.py  view_helpers.py  views.py
gin_scoring/apps/scoreboard/business_logic/: _get_player_pair_hall_of_fame.py  _get_player_pair_hall_of_fame_monthly.py
gin_scoring/apps/scoreboard/management/commands/: dev_create_game.py  dev_create_games_batch.py  generate_assets.py  import_previous_db_format.py
gin_scoring/apps/scoreboard/migrations/: 0001_initial.py
gin_scoring/apps/scoreboard/templates/scoreboard/: _all_time_leaderboard.html  _current_month.html  _last_games.html  _layout.html  _monthly_leaderboard.html  _new_game_result_form.html  index.html  log-in.html
gin_scoring/apps/scoreboard/templatetags/: scoreboard.py
gin_scoring/lib/gin_rummy/: consts.py  rules.py
gin_scoring/project/: asgi.py  jinja2.py
gin_scoring/project/settings/: _base.py
internal/: config.go  db.go
internal/domain/: gin_rummy.go  types.go
internal/domain/mutations/: save_game_result.go
internal/domain/queries/: calculate_hall_of_fame_global.go  calculate_hall_of_fame_monthly.go  get_hall_of_fame_global.go  get_last_games.go
internal/http/: handlers.go
internal/http/templates/: homepage.gohtml
internal/http/templates/layouts/: main.gohtml
scripts/: start_server.sh
src/: app.py  db.ts
src/alembic/: env.py
src/alembic/versions/: 490d7e8880e6_create_game_results_table.py
src/apps/authentication/: apps.py
src/apps/authentication/migrations/: 0001_initial.py
src/apps/gin_scoring/: admin.py  apps.py  blueprint.py  conversion.py  gin_rummy.py  helpers.py  http_domain.py  http_payloads.py  models.py  urls.py  views.py
src/apps/gin_scoring/domain/: gin_rummy.py
src/apps/gin_scoring/domain/commands/: _save_game_result.py
src/apps/gin_scoring/domain/mutations/: _save_game_result.py
src/apps/gin_scoring/domain/queries/: __init__.py  _hall_of_fame.py  _hall_of_fame_monthly.py  _last_game_results.py
src/apps/gin_scoring/jinja2/gin_scoring/: _layout.html  index.html
src/apps/gin_scoring/migrations/: 0001_initial.py
src/db/: aliases.py  all_models.py  base.py  engine.py  session.py
src/gin_scoring/: business_logic.py  db.py  db_engine.py  deps.py  fixtures.py  gin_rummy.py  http.py  main.py  models.py  security.py  settings.py
src/gin_scoring/alembic/: env.py
src/gin_scoring/apps/authentication/: apps.py
src/gin_scoring/apps/gin_scoring/: admin.py  apps.py  models.py
src/gin_scoring/apps/gin_scoring/domain/mutations/: __init__.py
src/gin_scoring/apps/gin_scoring/domain/queries/: __init__.py
src/gin_scoring/apps/gin_scoring/jinja2/gin_scoring/: _layout.html  index.html
src/gin_scoring/apps/scoreboard/: admin.py  http_payloads.py  models.py  urls.py  views.py
src/gin_scoring/apps/scoreboard/domain/queries/: _hall_of_fame.py  _hall_of_fame_monthly.py  _last_game_results.py
src/gin_scoring/apps/scoreboard/jinja2/gin_scoring/: _layout.html  index.html
src/gin_scoring/apps/scoreboard/migrations/: 0001_initial.py
src/gin_scoring/lib/gin_rummy/: rules.py
src/gin_scoring/project/: urls.py  wsgi.py
src/gin_scoring/project/settings/: _base.py
src/pages/: index.tsx
src/project/: jinja2.py  urls.py
src/project/settings/: _base.py  development.py  flyio.py  production.py
styles/: Home.module.css
tests/: conftest.py  integration_test.py
