[tool.poetry]
name = "gin-scoring"
version = "0.1.0"
description = "A simple Gin Rummy leaderboard"
authors = ["Olivier Philippon <olivier@dunsap.com>"]
packages = [
    { include = "gin_scoring", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
argon2-cffi = "^23.1.0"
asgiref = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ipython = "^8.24.0"

[tool.ruff]
# @link https://docs.astral.sh/ruff/configuration/
target-version = "py312"
exclude = [
]

[tool.ruff.lint]
select = [
    "F", # flake8
    "I", # isort
    # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TCH001",
    "TCH002",
    "TCH003",
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
combine-as-imports = true
known-first-party = ["gin_scoring"]

[tool.ruff.lint.flake8-type-checking]
# https://docs.astral.sh/ruff/settings/#lintflake8-type-checking
quote-annotations = true
strict = true
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
]


[tool.mypy]
# @link https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
python_version = "3.12"
mypy_path = "src/"
exclude = [
]
[[tool.mypy.overrides]]
module = [
    "dominate.*",
    "time_machine.*",
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
