[tool.poetry]
name = "gin-scoring"
version = "0.1.0"
description = ""
authors = ["Olivier Philippon <olivier@dunsap.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.13"
django-environ = "^0.9.0"
psycopg2 = "^2.9.3"
Jinja2 = "^3.1.2"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pywatchman = "^1.4.1"
ipython = "^8.4.0"
mypy = "^0.961"
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"
line_length = 119
multi_line_output = 3
known_first_party = ["apps"]
combine_as_imports = true

[tool.mypy]
# @link https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
python_version = "3.10"
mypy_path = "src/"
exclude = [
    '^src/project/settings/.*\.py$',
    '^src/apps/[^/]+/migrations/.*\.py$',
]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
# @link https://github.com/typeddjango/django-stubs
django_settings_module = "project.settings.development"

[[tool.mypy.overrides]]
module = "environ"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--reuse-db"
DJANGO_SETTINGS_MODULE = "project.settings.test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
