[tool.poetry]
name = "gin-scoring"
version = "0.1.0"
description = ""
authors = ["Olivier Philippon <olivier@dunsap.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
Django = "~5.1"
gunicorn = "^23"
whitenoise = "^6.7"
dj-database-url = "^2.2.0"
django-colorfield = "^0.11.0"

[tool.poetry.group.dev.dependencies]
black = "^24"
isort = "^5.10.1"
pywatchman = "^2"
mypy = "~1.11"
django-stubs = {version = "~5.1", extras = ["compatible-mypy"]}
pytest = "^8.3"
pytest-django = "^4.9"
pre-commit = "^3.8.0"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}

[tool.black]
target-version = ['py311']

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 3
known_first_party = ["apps"]
combine_as_imports = true

[tool.mypy]
# @link https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
python_version = "3.11"
mypy_path = "src/"
exclude = [
    '^src/gin_scoring/project/settings/.*\.py$',
    '^src/gin_scoring/apps/[^/]+/migrations/.*\.py$',
]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "colorfield.*",
]
ignore_missing_imports = true

[tool.django-stubs]
# @link https://github.com/typeddjango/django-stubs
django_settings_module = "gin_scoring.project.settings.development"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--reuse-db"
DJANGO_SETTINGS_MODULE = "gin_scoring.project.settings.test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
